--- a/package.xml
+++ b/package.xml
@@ -12,6 +12,15 @@
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
 
+  <!--Make sure to add these in!-->
+  <depend>joint_state_publisher</depend>
+  <depend>robot_state_publisher</depend>
+  <exec_depend>xacro</exec_depend>
+  <exec_depend>ros_gz</exec_depend>
+  <exec_depend>ros_gz_sim</exec_depend>
+  <exec_depend>ros_gz_bridge</exec_depend>
+  <exec_depend>rviz2</exec_depend>
+
   <export>
     <build_type>ament_cmake</build_type>
   </export>
