--- a/yaml/gazebo_bridge.yaml
+++ b/yaml/gazebo_bridge.yaml
@@ -10,68 +10,56 @@
 #9. On this page you will find the corresponding gazebo topic type and ros topic type and here you can map them together!
 
 
-#Used for Mobile Base
-- ros_topic_name: "/clock"
+#Always use these
+
+- ros_topic_name: "/clock" #Ensures sim_time matches across the programs
   gz_topic_name: "/clock"
   ros_type_name: "rosgraph_msgs/msg/Clock"
   gz_type_name: "gz.msgs.Clock"
   direction: GZ_TO_ROS
 
-- ros_topic_name: "/joint_states"
+- ros_topic_name: "/joint_states"  #gz topic published by JointState plugin
   gz_topic_name: "/world/empty/model/camlidarbot/joint_state"
   ros_type_name: "sensor_msgs/msg/JointState"
   gz_type_name: "gz.msgs.Model"
   direction: GZ_TO_ROS
 
-- ros_topic_name: "/tf"
-  gz_topic_name: "/model/camlidarbot/tf"
-  ros_type_name: "tf2_msgs/msg/TFMessage"
-  gz_type_name: "gz.msgs.Pose_V"
-  direction: GZ_TO_ROS
+#==============================================
 
-- ros_topic_name: "/cmd_vel"
+
+#Use if a mobile base you want to control
+
+- ros_topic_name: "/cmd_vel" #gz topic published by DiffDrive plugin
   gz_topic_name: "/model/camlidarbot/cmd_vel"
   ros_type_name: "geometry_msgs/msg/Twist"
   gz_type_name: "gz.msgs.Twist"
   direction: ROS_TO_GZ
 
-- ros_topic_name: "/scan"
-  gz_topic_name: "/lidar"
-  ros_type_name: "sensor_msgs/msg/LaserScan"
-  gz_type_name: "gz.msgs.LaserScan"
+- ros_topic_name: "/tf"  #gz topic published by DiffDrive plugin
+  gz_topic_name: "/model/camlidarbot/tf"
+  ros_type_name: "tf2_msgs/msg/TFMessage"
+  gz_type_name: "gz.msgs.Pose_V"
   direction: GZ_TO_ROS
 
-
-#Only used for NAV2
-- ros_topic_name: "/goal_pose"
+- ros_topic_name: "/odom" #gz topic published by DiffDrive plugin
   gz_topic_name: "/model/camlidarbot/odometry"
   ros_type_name: "nav_msgs/msg/Odometry"
   gz_type_name: "gz.msgs.Odometry"
   direction: GZ_TO_ROS
 
+#==============================================
 
-#Other commonly used ones!
+#Used for lidar
+- ros_topic_name: "/scan"
+  gz_topic_name: "/scan"
+  ros_type_name: "sensor_msgs/msg/LaserScan"
+  gz_type_name: "gz.msgs.LaserScan"
+  direction: GZ_TO_ROS
+  lazy: false
 
+#Used for camera
 # - ros_topic_name: "/camera/image_raw"
 #   gz_topic_name: "/camera_image"
 #   ros_type_name: "sensor_msgs/msg/Image"
 #   gz_type_name: "gz.msgs.Image"
-#   direction: GZ_TO_ROS
-
-# - ros_topic_name: "/scan"
-#   gz_topic_name: "/lidar_scan"
-#   ros_type_name: "sensor_msgs/msg/LaserScan"
-#   gz_type_name: "gz.msgs.LaserScan"
-#   direction: GZ_TO_ROS
-
-# - ros_topic_name: "/odom"
-#   gz_topic_name: "/model/my_robot/odometry" # Adjust 'my_robot' to your robot's model name in Gazebo
-#   ros_type_name: "nav_msgs/msg/Odometry"
-#   gz_type_name: "gz.msgs.Odometry"
-#   direction: GZ_TO_ROS
-
-# - ros_topic_name: "/robot_joint_states"
-#   gz_topic_name: "/model/my_robot/joint_state" # Often published by Gazebo's Diff Drive or other plugins
-#   ros_type_name: "sensor_msgs/msg/JointState"
-#   gz_type_name: "gz.msgs.Model" # Or gz.msgs.JointState, depending on how Gazebo publishes it
 #   direction: GZ_TO_ROS
